# snipster

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  tests.yml
migrations/: env.py
migrations/versions/: 2ae43f1f7374_initial_design.py  81db7767ffae_remove_tag_active_flag.py
scripts/: seed_db.py
src/snipster/: api.py  cli.py  models.py  repo.py  scratch.py
src/snipster/gui/app/: __init__.py  config.json.template  config.py  forms.py  routes.py
src/snipster/gui/app/static/css/: input.css  main.css
src/snipster/gui/app/templates/: base.html  index.html  snippet.html  snippet_form.html  tag_form.html
tests/: conftest.py  test_api.py  test_cli.py  test_models.py  test_repo.py
