[project]
name = "snipster"
version = "0.1.0"
description = "A tool to store and manage code snippets."
readme = "README.md"
authors = [
    { name = "Kishan Patel", email = "kishanpatel789@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
]

[project.scripts]
snipster = "snipster:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
