[project]
name = "snipster"
version = "0.1.0"
description = "A tool to store and manage code snippets."
readme = "README.md"
authors = [
    { name = "Kishan Patel", email = "kishanpatel789@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.12",
    "flask>=3.1.1",
    "httpx>=0.28.1",
    "python-decouple>=3.8",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
]

[project.scripts]
snipster = "snipster.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "alembic>=1.16.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
